--- a/.swiftpm/xcode/xcshareddata/xcschemes/GetIP.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/GetIP.xcscheme
@@ -48,6 +48,20 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "GetIPInternal"
+               BuildableName = "GetIPInternal"
+               BlueprintName = "GetIPInternal"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
